Added plugin for ISPN 15 and DG 8.5