@@ -63,6 +63,7 @@ help_and_exit() {
   exit 0
 }
 
+JVM_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
 
 ### read in any command-line params
 while ! [ -z $1 ]
